# plexichat

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  0.10.2  0.104.1  0.13.0  0.25.2  0.4.6  0.9.0  1.7.4  10.1.0  13.7.0  2.0.1  2.0.23  2.1.0  2.31.0  2.5.0  2.8.2  2.9.0  2023.2.7  23.2  3.0.0  3.0.1  3.3.0  3.3.2  3.5.1  3.9.1  4.1.2  4.20.0  4.9.3  41.0.7  5.9.6  6.0.1  7.4.2  8.1.7  9.3.1  =0.0.6  =0.10.0  =0.10.2  (+189 more)
.VSCodeCounter/2025-11-22_18-16-08/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.augment/rules/: coding.md
.github/: dependabot.yml
.github/workflows/: ci.yml  docker.yml  docs.yml  security-tests.yml
backup_node/: backup_node_client.py  backup_node_main.py  config.json  start_backup_node.py
config/: plexichat.json  plexichat.yaml  system.json
core/: __init__.py  app_setup.py  authentication.py  config.py  config_manager.py  logging.py  mfa_store.py  orchestrator.py  rate_limit_config.py  search_service.py  user.py  utils.py  validation.py
core/assessments/: monitoring_and_unified_assessment.md  unified_files_assessment.md
core/cache/: __init__.py  manager.py
core/caching/: __init__.py  cache_manager.py  unified_cache_integration.py
core/clustering/: __init__.py  cluster_manager.py  node_manager.py
core/errors/: __init__.py  base.py  circuit_breaker.py  error_codes.py  error_manager.py  exceptions.py  handlers.py
core/events/: __init__.py  event_manager.py
core/files/: __init__.py  enhanced_file_sharing.py  file_manager.py
core/fix_plans/: server_access_fix_plan.md  server_start_attr_fix_plan.md
core/logging/: pii_redaction.py  unicode_utils.py  unified_logger.py
core/messaging/: __init__.py  base.py  message_formatter.py  message_processor.py  unified_messaging_system.py
core/middleware/: __init__.py  integrated_protection_system.py  ip_blacklist_middleware.py  middleware_manager.py  rate_limiting.py
core/monitoring/: __init__.py  base_monitor.py  metrics_collector.py  resource_tracker.py  unified_monitoring_system.py
core/notifications/: __init__.py  base_sender.py  email_service.py  notification_manager.py  push_service.py
core/performance/: __init__.py  auth_cache.py  cache_cluster_manager.py  distributed_cache.py  edge_computing_manager.py  latency_optimizer.py  memory_manager.py  message_queue.py  message_queue_manager.py  microsecond_optimizer.py  multi_tier_cache.py  multi_tier_cache_manager.py  network_optimizer.py  optimization_engine.py  resource_manager.py  scalability_manager.py
core/plugins/: __init__.py  manager.py  manifest_validator.py  plugin_manager.py  sandbox.py  sdk.py  sdk_generator.py  security_manager.py
core/refactor_plans/: fallbacks_refactor_plan.md  logging_refactor_plan.md  middleware_refactor_plan.md  monitoring_refactor_plan.md  verification_report.md
core/scheduler/: __init__.py  task_scheduler.py
core/security/: __init__.py  auth_integration.py  comprehensive_security_manager.py  content_validation.py  db_security.py  ddos_protection.py  key_vault.py  monitoring.py  oram.py  (+12 more)
dev/: README.md  analyze_codebase.py  code_cleanup.py  code_cleanup_report.json  codebase_analysis_report.json  create_plugin_ui.py  enhance_plugin_ui.py  format.ps1  format.sh  import_test_report.json  importscanner.py  installer.py  lint.ps1  lint.sh  plugin_manager.py  requirements-dev.txt  run_pycompile.py  test.ps1  test.sh  test_imports.py
docker/: entrypoint.sh
docs/: ADMIN_UPDATE_GUIDE.md  API.md  API_REFERENCE.md  ARCHITECTURE.md  ARCH_overview.md  AUTHENTICATION_CONSOLIDATION_SUMMARY.md  AUTHENTICATION_SYSTEM_REFACTOR.md  BACKUP_CORE_CONSOLIDATION_SUMMARY.md  BACKUP_SYSTEM.md  CERTIFICATE_MANAGEMENT_AND_RUN_PY_IMPROVEMENTS.md  CLIENT_SETTINGS.md  CODE_AUDIT_REPORT.md  DATABASE_CONSOLIDATION_SUMMARY.md  DEPLOYMENT.md  DESIGN_shard_constraints.md  DESIGN_shard_distribution_constraints.md  DEVELOPER_GUIDE.md  ENDPOINT_REBRANDING_SUMMARY.md  ENHANCED_SECURITY_LOGGING.md  FEATURES.md  FEATURES_DISCOVERY.md  FEATURE_ROADMAP.md  GETTING_STARTED.md  HTTPS_SETUP.md  INCIDENT_RESPONSE.md  LOGGING_IMPROVEMENT_PLAN.md  MAINTAINING_DOCUMENTATION.md  NETWORK_PROTECTION_AND_GIT_UPDATE_SYSTEM.md  P2P_SHARDED_BACKUP_DISCOVERY.md  PERFORMANCE.md  PLAN_task_graph.md  PLEXICHAT_TRANSFORMATION_COMPLETE.md  PLUGINS.md  PLUGIN_API_ACCESS.md  PLUGIN_API_REFERENCE.md  PLUGIN_DEVELOPMENT.md  PLUGIN_SDK.md  PLUGIN_SECURITY.md  README.md  REPORT_duplicate_inventory.md  (+51 more)
errors/: error_manager_simple.py
gui/: launch_gui.py  netlink_admin_gui.py
installer/: install.ps1  install.py  install.sh
logging/: correlation_tracker_enterprise.py  performance_logger_enterprise.py
mypy-stubs/: cython.pyi  numba.pyi
plexichat_testing/: run.py
plugins/: __init__.py  api_integration_layer.py  archive_system.py  core_security.py  core_system.py  database_manager.py  encryption_manager.py  performance_manager.py  plugin_internal.py  plugins_internal.py  web_interface.py
reports/: test_report_20250725_211411.json
scripts/: build_compiled.bat  migrate_plugin_configs.py  rename_files.ps1  run_security_tests.py  update_imports.py
security/: advanced_intrusion_detection_enterprise.py  certificate_manager_simple.py  input_validation_simple.py  security_decorators_simple.py
services/: database_service_simple.py  service_loader_simple.py
test/: security.txt
test_plexichat_install/: run.py
tests/: __init__.py  conftest.py  run_tests.py  test_ci_build.py  test_compilation.py  test_import_validation.py  test_static_analysis.py
tests-backup/: README.md  __init__.py  comprehensive_security_tests.py  conftest.py  quick_test.py  security_audit_report.py  test_backup.py  test_backup_system.py  test_basic_structure.py  test_complete_system.py  test_config.py  test_database_performance.py  test_files.py  test_final_validation.py  test_logging.py  test_security.py  unified_test_runner.py  validate_system.py
uploads/: 86978bf6-c010-47b2-833f-9226f4b8126f.txt
versioning/: canary_deployment_manager_simple.py
y_testing/: README.md  requirements.txt  run.py
(+3083 files in other folders)
