[build-system]
requires = ["setuptools>=69.0.0", "wheel>=0.42.0"]
build-backend = "setuptools.build_meta"

[project]
name = "plexichat"
version = "1.0.0"
description = "Advanced chat platform with enterprise features"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "PlexiChat Team", email = "team@plexichat.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.11"
dependencies = [
    # Core dependencies
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    "bcrypt>=4.1.2",
    "psutil>=5.9.0",
    "websockets>=12.0",
    "aiofiles>=23.2.1",
    "python-dotenv>=1.0.0",
    "cryptography>=41.0.7",
    "sqlite-utils>=3.35.2",
    "sqlalchemy[asyncio]>=2.0.23",
    "aiosqlite>=0.19.0",
    "asyncio-mqtt>=0.13.0",
    "httpx>=0.25.2",
    "rich>=13.7.0",
    "typer>=0.9.0",
    "colorama>=0.4.6",
    "click>=8.1.7",
    "Pillow>=10.1.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.2",
    "lxml>=4.9.3",
    "markdown>=3.5.1",
    "PyYAML>=6.0.1",
    "toml>=0.10.2",
    "python-dateutil>=2.8.2",
    "packaging>=23.2",
    "setuptools>=69.0.0",
    "wheel>=0.42.0",
    # Authentication and security
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "pyotp>=2.9.0",
    "qrcode[pil]>=7.4.2",
    "email-validator>=2.1.0",
    # Additional core utilities
    "tabulate>=0.9.0",
    "motor>=3.3.2",
    "aioredis>=2.0.1",
    "aiohttp>=3.9.1",
    "aiokafka>=0.10.0",
    "aio-pika>=9.3.1",
    "jsonschema>=4.20.0",
    "werkzeug>=3.0.1",
    "flask>=3.0.0",
    "pefile>=2023.2.7",
    "phonenumbers>=8.13.27",
]

[project.optional-dependencies]
full = [
    # Database connectors
    "psycopg2-binary>=2.9.9",
    "aiomysql>=0.2.0",
    "alembic>=1.13.1",
    # Machine Learning and AI
    "transformers>=4.36.0",
    "torch>=2.1.1",
    "scikit-learn>=1.3.2",
    "numpy>=1.24.4",
    "pandas>=2.1.4",
    "matplotlib>=3.8.2",
    "seaborn>=0.13.0",
    "plotly>=5.17.0",
    # Image and media processing
    "opencv-python>=4.8.1.78",
    "imageio>=2.33.0",
    # Web scraping and parsing
    "selenium>=4.16.0",
    "scrapy>=2.11.0",
    # Caching and queuing
    "redis>=5.0.1",
    "celery>=5.3.4",
    # Additional utilities
    "paramiko>=3.4.0",
    "fabric>=3.2.2",
    "jinja2>=3.1.2",
    "openpyxl>=3.1.2",
    "xlsxwriter>=3.1.9",
    "python-magic>=0.4.27; platform_system != 'Windows'",
    "schedule>=1.2.0",
    "watchdog>=3.0.0",
    "python-socketio>=5.10.0",
    "eventlet>=0.33.3",
]

dev = [
    # Testing framework
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-xdist>=3.5.0",
    "httpx[test]>=0.25.2",
    # Code quality and linting
    "black>=23.11.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.1",
    "pylint>=3.0.3",
    "bandit>=1.7.5",
    "safety>=2.3.5",
    # Documentation
    "sphinx>=7.2.6",
    "sphinx-rtd-theme>=1.3.0",
    # Development utilities
    "pre-commit>=3.6.0",
    "tox>=4.11.4",
    "cookiecutter>=2.5.0",
    "invoke>=2.2.0",
    "python-semantic-release>=8.5.1",
    # Performance profiling
    "memory-profiler>=0.61.0",
    "line-profiler>=4.1.1",
    "py-spy>=0.3.14",
    # Database development
    "pgcli>=4.0.1",
    "mycli>=1.27.0",
    # API documentation
    "flasgger>=0.9.7.1",
    "swagger-ui-bundle>=0.0.9",
    # Environment management
    "python-decouple>=3.8",
    "environs>=10.3.0",
    # Debugging
    "ipdb>=0.13.13",
    "pdbpp>=0.10.3",
    # Jupyter for prototyping
    "jupyter>=1.0.0",
    "ipykernel>=6.27.1",
]

[project.scripts]
plexichat = "plexichat.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pyright]
include = ["src", "tests"]
exclude = ["**/__pycache__", "build", "dist"]
pythonVersion = "3.11"
pythonPlatform = "All"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedImport = true
reportUnusedClass = true
reportUnusedFunction = true
reportUnusedVariable = true
reportDuplicateImport = true
reportOptionalSubscript = true
reportOptionalMemberAccess = true
reportOptionalCall = true
reportOptionalIterable = true
reportOptionalContextManager = true
reportOptionalOperand = true
reportTypedDictNotRequiredAccess = false
reportPrivateImportUsage = false
reportConstantRedefinition = true
reportIncompatibleMethodOverride = true
reportIncompatibleVariableOverride = true
reportInconsistentConstructor = true
reportOverlappingOverloads = true
reportMissingSuperCall = false
reportUninitializedInstanceVariable = false
reportInvalidStringEscapeSequence = true
reportUnknownParameterType = false
reportUnknownArgumentType = false
reportUnknownLambdaType = false
reportUnknownVariableType = false
reportUnknownMemberType = false
reportMissingParameterType = false
reportMissingTypeArgument = false
reportInvalidTypeVarUse = true
reportCallInDefaultInitializer = false
reportUnnecessaryIsInstance = false
reportUnnecessaryCast = false
reportUnnecessaryComparison = false
reportAssertAlwaysTrue = true
reportSelfClsParameterName = true
reportImplicitStringConcatenation = false
reportUndefinedVariable = true
reportUnboundVariable = true
reportInvalidStubStatement = true
reportIncompleteStub = true
reportUnsupportedDunderAll = true
reportUnusedCoroutine = true

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["plexichat"]

[tool.pytest.ini_options]
testpaths = ["tests", "src/plexichat/tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
